--- a/components/List/List.css
+++ b/components/List/List.css
@@ -1,5 +1,23 @@
 .wrapper {
-    background-color: #08151d;
-    padding: 20px;
-    font-family: Arial;
+  padding: 32px 16px 32px 32px;
+  font-family: Arial;
+  display: grid; 
+  grid-template-columns: auto 16px;
+  grid-gap: 10px;
 }
+
+.controls {
+  height: 30px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+.slide {
+  writing-mode: vertical-lr;
+  display: block;
+  transition: 1s cubic-bezier(.785,.135,.15,.86);
+  height: calc(100vh - 64px);
+  text-align: center;
+}
+
