--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: Arial;
+  font-family: 'Raisonne AN';
   background-color: #08151d;
   color: white;
   -webkit-font-smoothing: antialiased;
