--- a/components/List/List.css
+++ b/components/List/List.css
@@ -1,6 +1,5 @@
 .wrapper {
   padding: 32px 16px 32px 32px;
-  font-family: Arial;
   display: grid;
   grid-template-columns: auto 16px;
   grid-gap: 10px;
@@ -12,6 +11,10 @@
   transition: 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
   height: calc(100vh - 64px);
   text-align: center;
+}
+
+.SlideCounter {
+  display: inline;
 }
 
 
