--- a/components/List/List.css
+++ b/components/List/List.css
@@ -1,43 +1,10 @@
 .wrapper {
-  padding: 32px 16px 32px 32px;
-  display: grid;
-  grid-template-columns: auto 16px;
-  grid-gap: 10px;
+  width: 100%;
+  padding: 50px;
+  text-rendering: optimizeLegibility;
 }
 
-.slide {
-  writing-mode: vertical-lr;
-  display: block;
-  transition: 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  height: calc(100vh - 64px);
-  text-align: center;
-}
-
-.SlideCounter {
-  display: inline;
-}
-
-
-.left,
-.right {
-  cursor: w-resize;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20%;
-  height: 100%;
-}
-
-.right {
-  left: 80%;
-  cursor: e-resize;
-}
-
-.center {
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 20%;
-  width: 60%;
-  height: 100%;
+.projectList {
+  max-width: 1200px;
+  margin: 0 auto;
 }
