--- a/components/ListItem/ListItem.css
+++ b/components/ListItem/ListItem.css
@@ -1,55 +1,48 @@
 .slide {
   position: relative;
-  color: white;
   overflow: hidden;
-  border: 1px solid;
-  padding: 30px;
-  width: 100%;
-  height: calc(100vh - 64px);
+  border-top: 1px solid;
+  width: calc(100% - 40px);
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 15em;
+  /* margin: 0 20px 200px 20px; */
+  padding: 1rem 0;
+  transition: background 200ms;
+  background-color: #ffffff00;
+
+}
+
+.slide:hover {
+  background-color: #ffffff03;
+  transition: background 200ms;
 }
 
 .title {
-  position: absolute;
   z-index: 2;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  line-height: 2.6rem;
   display: block;
-  bottom: 30px;
-  left: 30px;
+  font-weight: 900;
+  text-transform: lowercase;
 }
 
-.description {
-  line-height: 2rem;
-  font-size: 1.7rem;
-  max-width: 60%;
+.date {
+  display: inline;
+  margin-right: .5rem;
 }
 
-.image {
-  position: absolute;
-  width: 100%;
-  left: 130px;
-  top: 170px;
-  transition-duration: 200ms;
+.url {
+  display: inline;
+  font-size: 1rem;
+  line-height: 2.1rem;
+  display: block;
+  opacity: .5;
 }
 
-.project:hover .image {
-  left: 80px;
-  top: 120px;
-  transition-duration: 200ms;
+.types {
+  text-align: right;
+  opacity: .5;
 }
 
 /* animation: fade-in 1s ease .95s forwards,slide-up 1s cubic-bezier(.165,.84,.44,1) .95s; */
-
-
-.slide_small {
-  position: relative;
-  color: white;
-  overflow: hidden;
-  border: 1px solid;
-  padding: 30px;
-  width: 100%;
-  height: auto;
-}
-
-.slide_small .title {
-  position: relative;
-}
