--- a/components/Animation/Animation.css
+++ b/components/Animation/Animation.css
@@ -1,10 +1,12 @@
 img {
-  width: 100%;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: 10%;
+  width: 300px;
 }
 
-.afbeelding {
+.afbeelding_wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
 }
