--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,9 @@ a {
   display: grid;
   grid-template-columns: 5% 47.5% 47.5%;
 }
+
+@media only screen and (max-width: 900px) {
+  .page_wrapper {
+    grid-template-columns: 100%;
+  }
+}
