--- a/components/List/List.css
+++ b/components/List/List.css
@@ -2,9 +2,24 @@
   width: 100%;
   padding: 50px;
   text-rendering: optimizeLegibility;
+  grid-column: 2;
+  grid-row: 1;
 }
 
 .projectList {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 900px) {
+  .wrapper {
+    grid-column: 1;
+    grid-row: 3;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .wrapper {
+    padding: 20px 20px;
+  }
 }
